--- a/z-test.html
+++ b/z-test.html
@@ -1,14 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <input type="hidden" name="" value="">
+if(role == "tiktok" && id != ""){
+    if(updateTiktokUrl != "" && isValidUrl(updateTiktokUrl)){
+        $.ajax({
+            type: "POST",
+            url: "../../../../g4stickerworks/asset/php/all-footer-page/update.php", // replace with the URL of your form processing script
+            data: { 
+                id: id,
+                role: role,
+                updateTiktokUrl: updateTiktokUrl
+            },
+            success: function(response){
+                console.log(response);
+                const responseVar = response.trim();
+                if(responseVar == "updated"){
+                    $("#updateSuccessAlert").show();
+                    $("#updateTiktokUrl").css('border-color', 'hsl(207, 90%, 54%)');
 
+                    setTimeout(function() {
+                        $("#updateSuccessAlert").hide(); // Show the element after 10 seconds
+                    }, 10000); // 10000 milliseconds = 10 seconds
 
-</body>
-</html>
+                    $("#displayDataAllTableupdate").load("../../../../../g4stickerworks/asset/php/all-footer-page/display/d-update-facebook.php");
+                    $("#facebookUrlContainer").load("../../../../../g4stickerworks/asset/php/all-footer-page/display/d-facebook.php");
+                }
+            },
+            error: function(jqXHR, textStatus, errorThrown) {
+                console.error("Form submission failed: " + textStatus, errorThrown); // log error message to the console
+                // do something to handle the error (e.g. display an error message to the user)
+            }
+        });
+    }else{
+        if(!isValidUrl(updateTiktokUrl)){
+            $("#invalidUrlFacebookErrUpdate").show();
+            $(this).css('border-color', 'hsl(4, 95%, 56%)');
+        }
+    }
+}
