--- a/product-page.html
+++ b/product-page.html
@@ -209,6 +209,7 @@
                     <div>
                         <button class="yot-btn-white1 yot-mb-8">Full Decals</button>
                         <button class="yot-btn-white1 yot-mb-8">Stock Decals</button> 
+                        <button class="yot-btn-white1 yot-mb-8">Sticker Mags</button>
                     </div>
                 </div>
 
@@ -226,18 +227,17 @@
                 <!-- Sticker 1-->
                 <div class="yot-bg-blue1 yot-mb-8 over-view-item3 yot-text-center" style="border-radius: 8px; padding: 8px;">
                     <div class="yot-mb-8">
-                        <h3 class="yot-tc-white">Sticker 1</h3>
+                        <h3 class="yot-tc-white">Product Sticker Labels</h3>
                     </div>
                     <div>
-                        <button class="yot-btn-white1 yot-mb-8">Sticker Mags</button>
-                        <button class="yot-btn-white1 yot-mb-8">Soviener Mug</button>
+                        <button class="yot-btn-white1 yot-mb-8">Soviener</button>
                     </div>
                 </div>
 
                 <!-- Sticker 2-->
                 <div class="yot-bg-blue1 yot-mb-8 over-view-item3 yot-text-center" style="border-radius: 8px; padding: 8px;">
                     <div class="yot-mb-8">
-                        <h3 class="yot-tc-white">Sticker 2</h3>
+                        <h3 class="yot-tc-white">Tarpauline</h3>
                     </div>
                     <div>
                         <button class="yot-btn-white1 yot-mb-8">Pack</button>
