--- a/index.html
+++ b/index.html
@@ -147,24 +147,38 @@
         </div>
     </div>
 
+    <!-- Description Section -->
+    <div class="yot-row yot-flex-ai-c yot-content-space-margin-t-120" style="padding:0;">
+        <!-- Description -->
+        <div class="yot-tc-blue1 yot-col-50" >
+            <h1 class="yot-resize-font-64 yot-mb-16" style="line-height: 1;">WE DESIGN,PRINT and INSTALL</h1>
+            <p class="yot-resize-font-18">Gabriel 4 Sticker Shop (G4 Sticker Works) 
+                is a  printing and installation 
+                business which caters any type 
+                of sticker and tarpaulin needs 
+                of clients for personal or 
+                business purpose.
+                
+                Our 6 years of experience has 
+                enabled us to provide the best
+                possible designing , printing 
+                and installation
+                where  we focus to quality 
+                resulting in satisfied client and 
+                have lasting business relationships.
+                
+                The foundation of our business 
+                is integrity, honesty and
+                client relationship.</p>
+        </div>
+
+        <!-- Image -->
+        <div class="yot-col-50">
+            <img src="./asset/images/undraw_designer_girl_re_h54c.svg" alt="" width="300" height="300">
+        </div>
+    </div>
+
     <main class="yot-content-space-margin-t-120 yot-container">
-        <!-- Description Section -->
-        <section class="yot-row yot-flex-ai-c" style="padding:0;">
-            <!-- Description -->
-            <div class="yot-tc-blue1 yot-col-50" >
-                <h1 class="yot-resize-font-64 yot-mb-16" style="line-height: 1;">WE DESIGN,PRINT and INSTALL</h1>
-                <p class="yot-resize-font-18">Tarpaulin Printing, Sticker Printing, Wall Décor,
-                    Office Glass Décor, Product Labels, Sintra Board
-                    Printing, Motorcycle Car, Company Vehicle, 
-                    Wrapping & Customize, Decals </p>
-            </div>
-
-            <!-- Image -->
-            <div class="yot-col-50">
-                <img src="./asset/images/undraw_designer_girl_re_h54c.svg" alt="" width="300" height="300">
-            </div>
-        </section>
-
         <!-- Product Section -->
         <section class="yot-content-space-margin-t-160">
             <!-- Title And Btn -->
