--- a/index.html
+++ b/index.html
@@ -155,20 +155,34 @@
             <!-- Description -->
             <div class="yot-tc-white  yot-col-50" >
                 <h1 class="yot-resize-font-64 yot-mb-16" style="line-height: 1;">WE DESIGN,PRINT and INSTALL</h1>
-                <p class="yot-resize-font-18">Tarpaulin Printing, Sticker Printing, Wall Décor,
-                    Office Glass Décor, Product Labels, Sintra Board
-                    Printing, Motorcycle Car, Company Vehicle, 
-                    Wrapping & Customize, Decals </p>
+                <p class="yot-resize-font-18">Gabriel 4 Sticker Shop (G4 Sticker Works) 
+                    is a  printing and installation 
+                    business which caters any type 
+                    of sticker and tarpaulin needs 
+                    of clients for personal or 
+                    business purpose.
+                    
+                    Our 6 years of experience has 
+                    enabled us to provide the best
+                    possible designing , printing 
+                    and installation
+                    where  we focus to quality 
+                    resulting in satisfied client and 
+                    have lasting business relationships.
+                    
+                    The foundation of our business 
+                    is integrity, honesty and
+                    client relationship.</p>
             </div>
 
             <!-- Image -->
             <div class="yot-col-50">
-                <!-- <img src="./asset/images/undraw_designer_girl_re_h54c.svg" alt="" width="300" height="300"> -->
+                <img src="./asset/images/undraw_designer_girl_re_h54c.svg" alt="" width="300" height="300">
             </div>
         </section>
 
         <!-- Product Section -->
-        <section class="yot-content-space-margin-t-160">
+        <section class="yot-content-space-margin-t-80">
             <!-- Title And Btn -->
             <div class="yot-flex yot-flex-ai-c-jc-sb yot-mb-16">
                 <div class="yot-tc-blue1">
@@ -221,7 +235,7 @@
         </section>
 
         <!-- Service Section -->
-        <section class="yot-content-space-margin-t-160">
+        <section class="yot-content-space-margin-t-80">
             <!-- Title And Btn -->
             <div class="yot-flex yot-flex-ai-c-jc-sb yot-mb-16">
                 <div class="yot-tc-blue1">
@@ -241,7 +255,7 @@
         </section>
 
         <!-- Contact Us Section -->
-        <section class="yot-content-space-margin-t-160">
+        <section class="yot-content-space-margin-t-80">
             <!-- Title-->
             <div class="yot-tc-blue1 yot-text-center">
                 <h1 class="yot-resize-font-64">CONTACT US</h1>
@@ -306,7 +320,7 @@
         </section>
 
         <!-- About Us Section -->
-        <section class="yot-content-space-margin-t-160">
+        <section class="yot-content-space-margin-t-80">
             <!-- Title-->
             <div class="yot-tc-blue1 yot-text-center">
                 <h1 class="yot-resize-font-64">ABOUT US</h1>
