--- a/index.html
+++ b/index.html
@@ -27,13 +27,24 @@
             <a href="#"><img src="./asset/images/g4works-logo.png" alt="" width="64" height="64"></a>
 
             <!-- Nav Links -->
-            <div class="yot-hide-for-mobile">
+            <div class="yot-hide-for-mobile yot-flex">
                 <a href="index.html" class="yot-text-fs-xl yot-active-bb-blue">Home</a> <span class="yot-mlr-4"></span> 
-                <a href="product.html" class="yot-text-fs-xl yot-active-bbh1">Product</a> <span class="yot-mlr-4"></span>
+                <!-- List Products -->
+                <div style="position: relative">
+                    <div class="tarpaulinContainerUserProduct yot-flex yot-active-bbh1 yot-cursor-pointer">
+                        <span class="tarpaulinNavLink yot-text-fs-xl">Products</span>
+                    </div>
+                    <div class="rPmLContainer yot-ml-48 yot-flex yot-flex-fd-c yot-bg-white yot-pa-16" style="display:none; position: absolute; width: 200px; right: -111px;">
+                        <a href="decals.html" class="yot-text-fs-xl yot-mb-8 yot-active-bbh1">Decals</a>
+                        <a href="temporary-plate" class="yot-text-fs-xl yot-mb-8 yot-active-bbh1">Temporary Plate</a>
+                        <a href="sticker-labels" class="yot-text-fs-xl yot-mb-8 yot-active-bbh1">Sticker Labels</a>
+                        <a href="tarpauline" class="yot-text-fs-xl yot-mb-8 yot-active-bbh1">Tarpauline</a>
+                    </div>
+                </div> <span class="yot-mlr-4"></span>
                 <a href="services.html" class="yot-text-fs-xl yot-active-bbh1">Services</a> <span class="yot-mlr-4"></span>
                 <a href="contact.html" class="yot-text-fs-xl yot-active-bbh1">Contact Us</a> <span class="yot-mlr-4"></span>
                 <a href="about.html" class="yot-text-fs-xl yot-active-bbh1">About Us</a> <span class="yot-mlr-4"></span>
-                <a href="gallery.html" class="yot-text-fs-xl yot-active-bbh1">Gallery</a> <span class="yot-mlr-4"></span>
+                <a href="gallery.html" class="yot-text-fs-xl yot-active-bbh1">Gallery</a>
             </div>
 
             <!-- Nav Links -->
