--- a/z-test.html
+++ b/z-test.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="file" name="" id="">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui enim quos, odit est et illum quidem. Obcaecati ex totam, labore a facere est accusamus repellendus laudantium nesciunt. Natus, odio necessitatibus.
 </body>
 </html>
