--- a/decals.html
+++ b/decals.html
@@ -183,9 +183,9 @@
                 <div>
                     <select class="yot-form-select yot-form-select-option" name="selectDecals" id="selectDecals">
                         <option value="">- Select Decals -</option>
-                        <option value="fullDecals">Full Decals</option>
-                        <option value="stockDecals">Stock Decals</option>
-                        <option value="stickerMags">Sticker Mags</option>
+                        <option value="Full Decals">Full Decals</option>
+                        <option value="Stock Decals">Stock Decals</option>
+                        <option value="Sticker Mags">Sticker Mags</option>
                     </select>
                 </div>
             </div>
@@ -193,7 +193,7 @@
             <!-- Decals Filter Btn-->
             <button id="decalsFilterBtn" class="yot-btn-blue1 yot-mb-16" style="display: none;">Filters</button>
 
-            <!-- Brand and Motor Cycle Title -->
+            <!-- Brand and Model Title -->
             <div id="brandAndMotorCycleTitle" class="yot-mb-16">
                 <h3 id="brandTitleDecals"></h3>
                 <h3 id="motorCycleTitle"></h3>
@@ -251,40 +251,13 @@
                 <!-- Select Brand Container -->
                 <div class="yot-mb-8">
                     <h3 class="yot-mb-4">Brand</h3>
-                    <select class="yot-form-select yot-form-select-option" name="brandSelect" id="brandSelect">
-                        <option value="">- Select -</option>
-                        <option value="yamaha">Yamaha</option>
-                        <option value="honda">Honda</option>
-                        <option value="suzuki">suzuki</option>
-                    </select>
+                    <select class="yot-form-select yot-form-select-option" name="brandSelect" id="brandSelect"></select>
                 </div>
 
-                <!-- Select Motor Cycle Yamaha -->
-                <div id="yamahaMotorCycleContainer" style="display: none;">
-                    <h3 class="yot-mb-4">Motor Cycle</h3>
-                    <select class="yot-form-select yot-form-select-option" name="yamahaMotorCylceSelect" id="yamahaMotorCylceSelect">
-                        <option value="">- Select -</option>
-                        <option value="Mio i 125">Mio i 125</option>
-                        <option value="Mio Aerox V1 & V2">Mio Aerox V1 & V2</option>
-                        <option value="Mio Soul i 125">Mio Soul i 125</option>
-                        <option value="Mio Sporty">Mio Sporty</option>
-                        <option value="Sniper">Sniper</option>
-                        <option value="Nmax">Nmax</option>
-                    </select>
-                </div>
-
-                <!-- Select Motor Cycle Honda -->
-                <div id="hondaMotorCycleContainer" style="display: none;">
-                    <h3 class="yot-mb-4">Motor Cycle</h3>
-                    <select class="yot-form-select yot-form-select-option" name="hondaMotorCylceSelect" id="hondaMotorCylceSelect">
-                        <option value="">- Select -</option>
-                        <option value="">Honda Click 125i</option>
-                        <option value="">Honda Click 160</option>
-                        <option value="">Honda PCX160</option>
-                        <option value="">Honda BeAT</option>
-                        <option value="">Honda TMX125 Alpha</option>
-                        <option value="">Honda ADV160</option>
-                    </select>
+                <!-- Select Model Container -->
+                <div id="modelContainer" style="display: none;">
+                    <h3 class="yot-mb-4">Model</h3>
+                    <select class="yot-form-select yot-form-select-option" name="modelSelect" id="modelSelect"></select>
                 </div>
             </div>
         </div>
