--- a/z-test.html
+++ b/z-test.html
@@ -1,6 +1,4 @@
-do it again on this list
-
-Honda
+Honda Philippines
 
 Honda BeAT
 Honda Click
@@ -24,7 +22,7 @@ Honda RS150R
 Honda Zoomer-X
 
 
-Yamaha Motor
+Yamaha Motor Philippines
 
 Yamaha Mio i 125
 Yamaha Mio Soul i 125
@@ -45,7 +43,7 @@ Yamaha XTZ125
 Yamaha YTX125
 Yamaha YBR125
 
-Suzuki
+Suzuki Philippines
 
 Suzuki Raider J Crossover
 Suzuki Skydrive Fi
@@ -63,7 +61,7 @@ Suzuki SV650X
 Suzuki GSX-R1000R
 Suzuki Hayabusa
 
-Kawasaki Motors
+Kawasaki Motors Philippines
 
 Kawasaki Ninja 400
 Kawasaki Z400
@@ -81,7 +79,7 @@ Kawasaki Vulcan S
 Kawasaki KLX150L
 Kawasaki KLX300R
 
-Kymco
+Kymco Philippines
 
 Kymco Like 125
 Kymco Agility 125
@@ -94,7 +92,7 @@ Kymco Like 200i
 Kymco X-Town 300i
 Kymco Like 150 R
 
-Kymco
+Kymco Philippines
 
 Kymco Like 125
 Kymco Agility 125
@@ -107,7 +105,7 @@ Kymco Like 200i
 Kymco X-Town 300i
 Kymco Like 150 R
 
-Motorstar
+Motorstar Philippines
 
 Motorstar Nicess 110
 Motorstar Star-X 125 II
@@ -120,8 +118,7 @@ Motorstar MSX II 125
 Motorstar Sapphire 110
 Motorstar MSX II 150
 
-TVS
-
+TVS Philippines
 
 TVS XL100
 TVS Rockz 125
@@ -130,3 +127,20 @@ TVS Apache RTR 160
 TVS Apache RTR 180
 TVS Apache RTR 200
 TVS Apache RR 310
+
+Royal Enfield Philippines
+
+Royal Enfield Classic 350
+Royal Enfield Meteor 350
+Royal Enfield Himalayan
+Royal Enfield Continental GT 650
+Royal Enfield Interceptor 650
+
+CFMoto Philippines
+
+CFMoto 150NK
+CFMoto 250NK
+CFMoto 400NK
+CFMoto 650NK
+CFMoto 650MT
+CFMoto 650GT
