--- a/profile.html
+++ b/profile.html
@@ -95,6 +95,7 @@
     <!-- Profile Container -->
     <div class="yot-content-space-margin-t-120 yot-container">
         <div class="yot-row">
+            <!-- Profile Image and Name Container -->
             <div class="yot-col-33-33" >
                 <div class="yot-img-circle-128 yot-mb-16">
                     <img src="./asset/images/g4works-logo.png" alt="">
@@ -102,13 +103,14 @@
                 </div>
             </div>
 
+            <!-- Personal Informatio and Security Container -->
             <div class="yot-col-66-66">
                 <!-- Title Personal Information-->
                 <div>
                     <h1 class="yot-mb-8 yot-tc-blue1">Personal Information</h1>
                 </div>
 
-                <!-- Name And Address Container -->
+                <!-- Name And Phone Number Container -->
                 <div class="yot-row"  style="padding: 0;">
                     <!-- Name -->
                     <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
@@ -119,28 +121,13 @@
                         <h4>Red Grey</h4>
                     </div>
 
-                    <!-- Address -->
-                    <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
-                        <div class="yot-flex yot-flex-ai-c-jc-sb">
-                            <h3>Address</h3>
-                            <i class="fa-solid fa-location-dot yot-text-fs-xxl yot-active-bbh1"></i>
-                        </div>
-                        <h4>Blk1 lot1 ph2 Muzon</h4>
-                    </div>
-                </div>
-
-                <!-- Phone Container -->
-                <div class="yot-row yot-mb-8" style="padding: 0;">
+                    <!-- Phone Number -->
                     <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
                         <div class="yot-flex yot-flex-ai-c-jc-sb">
                             <h3>Phone Number</h3>
                             <i class="fa-solid fa-mobile yot-text-fs-xxl yot-active-bbh1"></i>
                         </div>
                         <h4>09123456789</h4>
-                    </div>
-
-                    <div class="yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
-
                     </div>
                 </div>
 
