--- a/profile.html
+++ b/profile.html
@@ -93,66 +93,59 @@
     </div>
 
     <!-- Profile Container -->
-    <div class="yot-content-space-margin-t-120 yot-container">
-        <div class="yot-row">
-            <!-- Profile Image and Name Container -->
-            <div class="yot-col-33-33" >
-                <div class="yot-img-circle-128 yot-mb-16">
-                    <img src="./asset/images/g4works-logo.png" alt="">
-                    <h1>Red Grey</h1>
+    <div class="yot-content-space-margin-t-120 yot-container yot-overlay-mid-container-form-tablet-size-up">
+        <!-- Personal Informatio and Security Container -->
+        <div class="yot-img-circle-128 yot-mb-16">
+            <img src="./asset/images/g4works-logo.png" alt="">
+            <h1>Red Grey</h1>
+        </div>
+
+        <!-- Title Personal Information-->
+        <div>
+            <h1 class="yot-mb-8 yot-tc-blue1">Personal Information</h1>
+        </div>
+
+        <!-- Name And Phone Number Container -->
+        <div class="yot-row"  style="padding: 0;">
+            <!-- Name -->
+            <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
+                <div class="yot-flex yot-flex-ai-c-jc-sb">
+                    <h3>Name</h3>
+                    <i class="fa-solid fa-user yot-text-fs-xxl yot-active-bbh1"></i>
                 </div>
+                <h4>Red Grey</h4>
             </div>
 
-            <!-- Personal Informatio and Security Container -->
-            <div class="yot-col-66-66">
-                <!-- Title Personal Information-->
-                <div>
-                    <h1 class="yot-mb-8 yot-tc-blue1">Personal Information</h1>
+            <!-- Phone Number -->
+            <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
+                <div class="yot-flex yot-flex-ai-c-jc-sb">
+                    <h3>Phone Number</h3>
+                    <i class="fa-solid fa-mobile yot-text-fs-xxl yot-active-bbh1"></i>
                 </div>
+                <h4>09123456789</h4>
+            </div>
+        </div>
 
-                <!-- Name And Phone Number Container -->
-                <div class="yot-row"  style="padding: 0;">
-                    <!-- Name -->
-                    <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
-                        <div class="yot-flex yot-flex-ai-c-jc-sb">
-                            <h3>Name</h3>
-                            <i class="fa-solid fa-user yot-text-fs-xxl yot-active-bbh1"></i>
-                        </div>
-                        <h4>Red Grey</h4>
-                    </div>
+        <!-- Title Security -->
+        <div>
+            <h1 class="yot-mb-8 yot-tc-blue1">Security</h1>
+        </div>
 
-                    <!-- Phone Number -->
-                    <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
-                        <div class="yot-flex yot-flex-ai-c-jc-sb">
-                            <h3>Phone Number</h3>
-                            <i class="fa-solid fa-mobile yot-text-fs-xxl yot-active-bbh1"></i>
-                        </div>
-                        <h4>09123456789</h4>
-                    </div>
+        <div class="yot-row"  style="padding: 0;">
+            <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
+                <div class="yot-flex yot-flex-ai-c-jc-sb">
+                    <h3>Email</h3>
+                    <i class="fa-solid fa-envelope yot-text-fs-xxl yot-active-bbh1"></i>
                 </div>
+                <h4>redgrey@gmail.com</h4>
+            </div>
 
-                <!-- Title Security -->
-                <div>
-                    <h1 class="yot-mb-8 yot-tc-blue1">Security</h1>
+            <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
+                <div class="yot-flex yot-flex-ai-c-jc-sb">
+                    <h3>Password</h3>
+                    <i class="fa-solid fa-key yot-text-fs-xxl yot-active-bbh1"></i>
                 </div>
-
-                <div class="yot-row"  style="padding: 0;">
-                    <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
-                        <div class="yot-flex yot-flex-ai-c-jc-sb">
-                            <h3>Email</h3>
-                            <i class="fa-solid fa-envelope yot-text-fs-xxl yot-active-bbh1"></i>
-                        </div>
-                        <h4>redgrey@gmail.com</h4>
-                    </div>
-
-                    <div class="yot-bg-white yot-col-50 yot-ma-4" style="border-radius: 10px; padding:16px;">
-                        <div class="yot-flex yot-flex-ai-c-jc-sb">
-                            <h3>Password</h3>
-                            <i class="fa-solid fa-key yot-text-fs-xxl yot-active-bbh1"></i>
-                        </div>
-                        <h4>***********</h4>
-                    </div>
-                </div>
+                <h4>***********</h4>
             </div>
         </div>
     </div>
