--- a/z-add-feature.html
+++ b/z-add-feature.html
@@ -1,3 +1,10 @@
-add feature 
-courier 
-pick up
+add payment 
+ - courier 
+ - pick up
+
+status_order
+ - NOTPAID
+ - PAID
+ - PENDING
+ - DONE
+ - 
