--- a/z-test.html
+++ b/z-test.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci culpa doloribus eum sed, veniam amet reprehenderit ea voluptatibus iste voluptatem, similique nobis mollitia, architecto quidem? Et temporibus vel itaque magni!
-</body>
-</html>
+Warning: Undefined variable $classConnDB in C:\xampp\htdocs\g4stickerworks\asset\php\orders-temporary-plate.php\display\d-not-paid.php on line 14
+
+Fatal error: Uncaught Error: Call to a member function conn() on null in C:\xampp\htdocs\g4stickerworks\asset\php\orders-temporary-plate.php\display\d-not-paid.php:14 Stack trace: #0 C:\xampp\htdocs\g4stickerworks\asset\php\orders-temporary-plate.php\display\d-not-paid.php(3): classTotal->getTotal() #1 {main} thrown in C:\xampp\htdocs\g4stickerworks\asset\php\orders-temporary-plate.php\display\d-not-paid.php on line 14
